<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AgendaFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBarAgenda"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:focusable="true"
                android:clickable="true"
                android:paddingVertical="12dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="@string/agenda"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_lamp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/shareBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@drawable/ic_lamp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shareBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="12dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_baseline_share_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@drawable/ic_baseline_share_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/agendaViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolBarAgenda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:elevation="5dp"
            app:tabIndicatorColor="@color/colorTabIndicator"
            app:tabIndicatorFullWidth="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/androidTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:icon="@drawable/ic_smartphone"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/webTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/web"
                android:icon="@drawable/ic_google_chrome"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/cloudTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloud"
                android:icon="@drawable/ic_google_cloud"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/moreTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:icon="@drawable/ic_coffee"/>

        </com.google.android.material.tabs.TabLayout>

    </androidx.viewpager.widget.ViewPager>
</androidx.constraintlayout.widget.ConstraintLayout>