<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardSpeakers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="25dp"
        app:cardElevation="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/agenda_card_foregnground"
            android:backgroundTint="@color/colorTabIndicator">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageSpeaker"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="4dp"
                android:layout_marginVertical="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_puzzle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:shapeAppearanceOverlay="@style/circleImageViewForSpeakers" />

            <TextView
                android:id="@+id/speakerNameSpeaker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/agenda"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                app:layout_constraintBottom_toTopOf="@id/degreeSpeaker"
                app:layout_constraintLeft_toRightOf="@id/imageSpeaker"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <LinearLayout
                android:id="@+id/underlineLayout"
                android:layout_width="0dp"
                android:layout_height="4dp"
                android:background="@color/colorTabIndicator"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/degreeSpeaker"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/speakerNameSpeaker"
                app:layout_constraintWidth_percent="0.6" />

            <TextView
                android:id="@+id/degreeSpeaker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:text="@string/example"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/shortBioSpeaker"
                app:layout_constraintLeft_toRightOf="@id/imageSpeaker"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/speakerNameSpeaker" />

            <TextView
                android:id="@+id/shortBioSpeaker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/contactLayout"
                app:layout_constraintLeft_toRightOf="@id/imageSpeaker"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/degreeSpeaker" />

            <LinearLayout
                android:id="@+id/contactLayout"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_marginVertical="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@id/shortBioSpeaker"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shortBioSpeaker">

                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:padding="3dp"
                    android:src="@drawable/ic_twitter" />

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:layout_marginHorizontal="12dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_facebook" />

                <ImageView
                    android:id="@+id/linkedIn"
                    android:layout_width="wrap_content"
                    android:padding="3dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_linkedin" />

                <ImageView
                    android:id="@+id/instagram"
                    android:padding="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_instagram" />

                <ImageView
                    android:id="@+id/web"
                    android:layout_width="wrap_content"
                    android:padding="3dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_world_wide_web" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>